# cmake-test

./: CMakeLists.txt  main.cpp  opengl.cpp  opengl.h
glad/src/: glad.c
